[gd_scene load_steps=11 format=3 uid="uid://52fb1vhbw6iv"]

[ext_resource type="Script" path="res://scenes/npc1.gd" id="1_05c1o"]
[ext_resource type="Texture2D" uid="uid://bt5e0mken3goj" path="res://assets/griffith.png" id="2_udkei"]
[ext_resource type="Texture2D" uid="uid://cpgipefc7y1ek" path="res://assets/chaticon.png" id="3_te3pm"]
[ext_resource type="AudioStream" uid="uid://dl3p5p2c3jhh2" path="res://assets/sounds/chat.wav" id="4_vi3dp"]
[ext_resource type="AudioStream" uid="uid://bsxdj6do18f4k" path="res://assets/sounds/suprise.wav" id="5_e3ntg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bp8pf"]
size = Vector2(29, 6.99997)

[sub_resource type="CircleShape2D" id="CircleShape2D_gn28i"]
radius = 26.0

[sub_resource type="Animation" id="Animation_e6twv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("chatIcon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -30)]
}

[sub_resource type="Animation" id="Animation_5djxa"]
resource_name = "bounce"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("chatIcon:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -50), Vector2(0, -55), Vector2(0, -50)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2gvuv"]
_data = {
"RESET": SubResource("Animation_e6twv"),
"bounce": SubResource("Animation_5djxa")
}

[node name="npc1" type="CharacterBody2D"]
z_index = 3
y_sort_enabled = true
collision_layer = 16
collision_mask = 15
script = ExtResource("1_05c1o")

[node name="npc1sprite" type="Sprite2D" parent="."]
position = Vector2(-1.25, -21)
scale = Vector2(0.07375, 0.0683333)
texture = ExtResource("2_udkei")
hframes = 3
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.25, -3.50002)
shape = SubResource("RectangleShape2D_bp8pf")

[node name="chatIcon" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(0, -30)
texture = ExtResource("3_te3pm")

[node name="npcBoundary" type="Area2D" parent="."]
position = Vector2(-1.25, -21)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="npcBoundary"]
shape = SubResource("CircleShape2D_gn28i")

[node name="chatSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_vi3dp")
bus = &"Sounds"

[node name="chatIconAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2gvuv")
}

[node name="surpriseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_e3ntg")

[connection signal="body_entered" from="npcBoundary" to="." method="_on_npc_boundary_body_entered"]
[connection signal="body_shape_exited" from="npcBoundary" to="." method="_on_npc_boundary_body_shape_exited"]
